// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveAndPublish Renders and icon and default content when no children are supplied 1`] = `
<div>
  <UnstyledLink
    data-id="action-save-and-publish"
    role="button"
    title="Opens a dialog"
    to="javascript:void(0);"
  >
    <CheckCircleOutline />
    <span>
      Save and Publish
    </span>
  </UnstyledLink>
</div>
`;

exports[`SaveAndPublish renders SaveAndPublish action 1`] = `
<div
  className="Foo"
>
  <UnstyledLink
    data-id="action-save-and-publish"
    role="button"
    title="Opens a dialog"
    to="javascript:void(0);"
  >
    <CheckCircleOutline />
    <span>
      Save and Publish
    </span>
  </UnstyledLink>
</div>
`;
